# representacion-y-estructuracion

./: .gitignore  Position_guesser.py  Readme.md  actvidad1.7.py  benchmark_csv_vs_parquet.py  benchmark_pandas_vs_polars.py  dashboard.py  equipos_filtrados_metricas_polars.csv  filtrado_pandas.py  filtrado_polars.py  graficos_pandas.py  graficos_polars_analisis.py  graficos_polars_basico.py  graficos_polars_interactivo.py  jugadores_combinados.csv  main.py  market_value.py  marketvalue.py  modelo_regresion.py  prediccion_posicion.py  pyproject.toml  requirements.txt  soccer.db
data_output/: datos_jugadores.csv  datos_jugadores_modelado.csv  equipos.parquet  equipos_filtrados_metricas.csv  equipos_filtrados_metricas_polars.csv  ranking_ofensivo.csv  resumen_por_liga.csv  top_por_victorias.csv
