[project]
name = "representacion-y-estructuracion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
]
